objects/Date__c/Date__c.object-meta.xml
<CustomObject>
    <label>Date</label>
    <nameField>
        <label>Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>