objects/Date__c/fields/Date_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_Check__c</fullName>
    <label>Date Check</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>