objects/Date__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month - Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>