objects/Date__c/fields/Roll_on_days__c.field-meta.xml
<CustomField>
    <fullName>Roll_on_days__c</fullName>
    <inlineHelpText>This is the number of days you need to roll on to get to the next working day</inlineHelpText>
    <label>Roll-on days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>