objects/Date__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sat</fullName>
            </value>
            <value>
                <fullName>Sun</fullName>
            </value>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thu</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
            <value>
                <fullName>BH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>