objects/Date__c/validationRules/ddmmyyyy_as_name.validationRule-meta.xml
<ValidationRule>
    <fullName>ddmmyyyy_as_name</fullName>
    <active>true</active>
    <errorConditionFormula>not(and(mid( Name ,3,1)=&apos;/&apos;,mid( Name ,6,1)=&apos;/&apos;))</errorConditionFormula>
    <errorMessage>date name must be of form dd/mm/yyyyy</errorMessage>
</ValidationRule>